@@ -3,7 +3,6 @@ package org.harryng.demo.quarkus.router.http;
 import io.quarkus.vertx.web.*;
 import io.smallrye.common.annotation.Blocking;
 import io.smallrye.mutiny.Uni;
-import io.smallrye.mutiny.unchecked.Unchecked;
 import io.vertx.core.buffer.Buffer;
 import io.vertx.core.impl.logging.Logger;
 import io.vertx.core.impl.logging.LoggerFactory;
@@ -11,16 +10,14 @@ import io.vertx.core.json.JsonObject;
 import io.vertx.ext.web.RoutingContext;
 import io.vertx.mutiny.core.http.HttpServerResponse;
 import org.harryng.demo.quarkus.base.controller.AbstractController;
-import org.harryng.demo.quarkus.base.service.BaseService;
 import org.harryng.demo.quarkus.user.entity.UserImpl;
 import org.harryng.demo.quarkus.user.service.UserService;
-import org.harryng.demo.quarkus.util.ReactiveUtil;
 import org.harryng.demo.quarkus.util.SessionHolder;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.inject.Inject;
 import javax.ws.rs.core.MediaType;
-import java.util.Map;
+import java.util.Collections;
 
 @ApplicationScoped
 @RouteBase(path = "/http/user", produces = {MediaType.APPLICATION_JSON})
@@ -29,23 +26,23 @@ public class UserRouter extends AbstractController {
     @Inject
     protected UserService userService;
 
-    protected Uni<UserImpl> getUserById(RoutingExchange exc, HttpServerResponse response, String id) {
-        return sessionFactory.withStatelessTransaction(Unchecked.function((session, trans) ->
-                        userService.getById(SessionHolder.createAnonymousSession(),
-                                Long.parseLong(id),
-                                Map.of(BaseService.TRANS_STATELESS_SESSION, session,
-                                        BaseService.TRANSACTION, trans
-                                )
-                        ))
-                )
-                // write response
-                .invoke(Unchecked.consumer(user -> {
-                    if (user == null) throw new RuntimeException("user is not found");
-                }))
-                .onFailure().invoke(ex -> response.setStatusCode(404).end(
-                        String.join("", "{\"code\":", "\"404\"", ",\"message\":\"",
-                                ex.getMessage(), "\"}")
-                ));
+    protected Uni<UserImpl> getUserById(RoutingExchange exc, HttpServerResponse response, String id) throws Exception {
+//        return sessionFactory.withStatelessTransaction(Unchecked.function((session, trans) ->
+//                        userService.getById(SessionHolder.createAnonymousSession(),
+//                                Long.parseLong(id),
+//                                Map.of(BaseService.TRANS_STATELESS_SESSION, session,
+//                                        BaseService.TRANSACTION, trans
+//                                )
+//                        ))
+//                )
+//                // write response
+//                .invoke(Unchecked.consumer(user -> {
+//                    if (user == null) throw new RuntimeException("user is not found");
+//                }))
+//                .onFailure().invoke(ex -> response.setStatusCode(404).end(
+//                        String.join("", "{\"code\":", "\"404\"", ",\"message\":\"",
+//                                ex.getMessage(), "\"}")
+//                ));
 //        return sessionFactory.withTransaction(Unchecked.function((session, trans) ->
 //                        userService.getById(SessionHolder.createAnonymousSession(),
 //                                Long.parseLong(id),
@@ -62,29 +59,41 @@ public class UserRouter extends AbstractController {
 //                        String.join("", "{\"code\":", "\"404\"", ",\"message\":\"",
 //                                ex.getMessage(), "\"}")
 //                ));
+        return userService.getById(SessionHolder.createAnonymousSession(), Long.parseLong(id), Collections.emptyMap());
     }
 
-    protected void editUser(RoutingContext ctx, Buffer buffer) {
-        sessionFactory.withStatelessTransaction(Unchecked.function(
-                (sess, trans) -> userService.edit(SessionHolder.createAnonymousSession(),
+    protected void editUser(RoutingContext ctx, Buffer buffer) throws Exception {
+//        sessionFactory.withStatelessTransaction(Unchecked.function(
+//                (sess, trans) -> userService.edit(SessionHolder.createAnonymousSession(),
+//                        getObjectMapper().readValue(buffer.toString(), UserImpl.class),
+//                        Map.of(BaseService.TRANS_STATELESS_SESSION, sess,
+//                                BaseService.TRANSACTION, trans,
+//                                BaseService.HTTP_HEADERS, ctx.request().headers(),
+//                                BaseService.HTTP_COOKIES, ctx.request().cookies())
+//                ))).subscribe().with(itm -> {
+//                    var jsonRs = new JsonObject();
+//                    jsonRs.put("result", itm);
+//                    ctx.response().end(jsonRs.toString());
+//                },
+//                ex -> {
+//                    logger.error("", ex);
+//                    ctx.response().end(ex.getCause().getMessage());
+//                });
+        userService.edit(SessionHolder.createAnonymousSession(),
                         getObjectMapper().readValue(buffer.toString(), UserImpl.class),
-                        Map.of(BaseService.TRANS_STATELESS_SESSION, sess,
-                                BaseService.TRANSACTION, trans,
-                                BaseService.HTTP_HEADERS, ctx.request().headers(),
-                                BaseService.HTTP_COOKIES, ctx.request().cookies())
-                ))).subscribe().with(itm -> {
-                    var jsonRs = new JsonObject();
-                    jsonRs.put("result", itm);
-                    ctx.response().end(jsonRs.toString());
-                },
-                ex -> {
-                    logger.error("", ex);
-                    ctx.response().end(ex.getCause().getMessage());
-                });
+                        Collections.emptyMap())
+                .subscribe().with(result -> {
+                            var jsonRs = new JsonObject();
+                            jsonRs.put("result", result);
+                        },
+                        ex -> {
+                            logger.error("", ex);
+                            ctx.response().end(ex.getCause().getMessage());
+                        });
     }
 
     @Route(path = "/:id", methods = Route.HttpMethod.GET, order = 500)
-    public Uni<UserImpl> getUserByIdNonBlocking(RoutingExchange exc, HttpServerResponse response, @Param("id") String id) {
+    public Uni<UserImpl> getUserByIdNonBlocking(RoutingExchange exc, HttpServerResponse response, @Param("id") String id) throws Exception {
         logger.info("into /http/user/:id get");
 //        getUserById(exc, response, id).subscribe().with(ReactiveUtil.defaultSuccessConsumer());
         return getUserById(exc, response, id);
@@ -92,7 +101,7 @@ public class UserRouter extends AbstractController {
 
     @Route(path = "/:id/blocking", methods = Route.HttpMethod.GET, type = Route.HandlerType.BLOCKING, order = 200)
     @Blocking
-    public UserImpl getUserByIdBlocking(RoutingExchange exc, HttpServerResponse response, @Param("id") String id) {
+    public UserImpl getUserByIdBlocking(RoutingExchange exc, HttpServerResponse response, @Param("id") String id) throws Exception {
         logger.info("into /http/user/:id/blocking get");
 //        return getUserById(exc, response, id).await().indefinitely();
         return getVertx().executeBlockingAndAwait(getUserById(exc, response, id));
@@ -105,19 +114,20 @@ public class UserRouter extends AbstractController {
     }
 
     @Route(path = "/*", methods = Route.HttpMethod.PUT, order = 500)
-    public void editUserNonBlocking(RoutingContext ctx, @Body Buffer buffer) {
+    public void editUserNonBlocking(RoutingContext ctx, @Body Buffer buffer) throws Exception {
         logger.info("into /http/user put");
         editUser(ctx, buffer);
     }
 
     @Route(path = "/blocking/*", methods = Route.HttpMethod.PUT, type = Route.HandlerType.BLOCKING, order = 200)
-    public void editUserBlocking(RoutingContext ctx, @Body Buffer buffer) {
+    public void editUserBlocking(RoutingContext ctx, @Body Buffer buffer) throws Exception {
         logger.info("into /http/user/nonblocking put");
         editUser(ctx, buffer);
     }
 
     @Route(path = "/:id", methods = Route.HttpMethod.DELETE, order = 500)
-    public void removeUser(RoutingContext ctx, @Param("id") String id) {
+    public void removeUser(RoutingContext ctx, @Param("id") String id) throws Exception {
         logger.info("into /http/user delete");
+        userService.remove(SessionHolder.createAnonymousSession(), Long.parseLong(id), Collections.emptyMap());
     }
 }
